# SDL-2D-Game

./: CMakeLists.txt  Makefile  README.md  animation.cpp  character.cpp  character.h  cleanup.h  coin.cpp  coin.h  coinAnimation.cpp  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  wolf.cpp  wolf.h
src/: animation.cpp  animation.h  character.cpp  character.h  coin.cpp  coin.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  wolf.cpp  wolf.h
